# base_assets

./: .gitmodules  CMakeLists.txt
acsu/: CMakeLists.txt
acsu/include/acsu/animation/: animation_asset.h
acsu/include/acsu/font/: font_asset.h
acsu/include/acsu/internal/: module.h
acsu/include/acsu/material/: material_asset.h
acsu/include/acsu/mesh/: mesh_asset.h
acsu/include/acsu/skinned_mesh/: skinned_mesh_asset.h
acsu/include/acsu/spatial/: bvh_asset.h
acsu/include/acsu/texture/: texture_asset.h
acsu/source/animation/: animation_asset.c
acsu/source/font/: font_asset.c
acsu/source/material/: material_asset.c
acsu/source/mesh/: mesh_asset.c
acsu/source/skinned_mesh/: skinned_mesh_asset.c
acsu/source/spatial/: bvh_asset.c
acsu/source/texture/: texture_asset.c
base_assets/: CMakeLists.txt
base_assets/include/base_assets/animation/: animation_asset.h
base_assets/include/base_assets/font/: font_asset.h
base_assets/include/base_assets/internal/: module.h
base_assets/include/base_assets/material/: material_asset.h
base_assets/include/base_assets/mesh/: mesh_asset.h
base_assets/include/base_assets/skinned_mesh/: skinned_mesh_asset.h
base_assets/include/base_assets/spatial/: bvh_asset.h
base_assets/include/base_assets/texture/: texture_asset.h
base_assets/source/animation/: animation_asset.c
base_assets/source/font/: font_asset.c
base_assets/source/material/: material_asset.c
base_assets/source/mesh/: mesh_asset.c
base_assets/source/skinned_mesh/: skinned_mesh_asset.c
base_assets/source/spatial/: bvh_asset.c
base_assets/source/texture/: texture_asset.c
